# client_server_task

./: CMakeLists.txt  DataBase.cpp  DataBase.h  MessageQueue.cpp  MessageQueue.h  client.cpp  logins.json  server.cpp
